--- a/contao/templates/event_teaser_landing_kkm.html.twig
+++ b/contao/templates/event_teaser_landing_kkm.html.twig
@@ -1,57 +1,2 @@
-{% use "@Contao/component/_figure.html.twig" %}
-
-{% block event_teaser_landing %}
-    <div class="event layout_teaser{{ classUpcoming }} col s12 m4 l3">
-        <div class="inner hc-bg-grey-dark">
-            {% block event_teaser_landing_media %}
-                {% if addImage is defined and addImage and figure is defined and figure %}
-                    {% set figure_attributes = attrs()
-                        .addClass('image_container' ~ floatClass|default(''))
-                    %}
-                    {% if margin is defined and margin %}
-                        {% set figure_attributes = figure_attributes.set('style', margin) %}
-                    {% endif %}
-                    {% with {figure: figure, figure_attributes: figure_attributes} %}
-                        {{ block('figure_component') }}
-                    {% endwith %}
-                {% endif %}
-            {% endblock %}
-
-            <div class="text">
-                {% block event_teaser_landing_title %}
-                    {% if hasDetails is defined and hasDetails %}
-                        <h2>
-                            <a href="{{ href }}"
-                               title="{{ title }} ({% if day is defined and day %}{{ day }}, {% endif %}{{ date }}{% if time is defined and time %}, {{ time|kkm_oclock }}{% endif %})"
-                               {{ target }}>
-                                {{ link }}
-                            </a>
-                        </h2>
-                    {% else %}
-                        <h2>{{ title }}</h2>
-                    {% endif %}
-                {% endblock %}
-
-                {% block event_teaser_landing_time %}
-                    <p class="time">
-                        <time datetime="{{ datetime }}" class="hc-bg-black-ter">
-                            {{ date|kkm_datetime(time, day, true) }}
-                        </time>
-                    </p>
-                {% endblock %}
-
-                {% block event_teaser_landing_teaser %}
-                    <div class="teaser">
-                        {{ teaser|raw }}
-                    </div>
-                {% endblock %}
-
-                {% block event_teaser_landing_more %}
-                    {% if hasDetails is defined and hasDetails %}
-                        <a class="more" href="{{ href }}">{{ more }}</a>
-                    {% endif %}
-                {% endblock %}
-            </div>
-        </div>
-    </div>
-{% endblock %}
+{% embed "@Contao/_event_teaser_kkm.html.twig" with {class: 's12 m4 l4'} %}
+{% endembed %}
